--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
 #  msix: ^3.16.8
 #  progressive_time_picker: ^1.0.1
   flutter_expandable_fab: ^2.2.0
-
+  timeline_tile: ^2.0.0
 
 
 
