--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   freezed: ^2.3.2
   infinite_scroll_pagination: ^4.0.0
   flutter_staggered_animations: ^1.1.1
+  pull_down_button: ^0.10.1
+
 
 dev_dependencies:
   flutter_test:
