--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: al_maafer
+name: second_brain
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -20,6 +20,9 @@ dependencies:
   get_storage: ^2.1.1
 #  time_planner: ^0.1.2+1
   intl:
+  windows_notification: ^1.3.0
+  path_provider: ^2.1.4
+
   window_manager: ^0.4.0
   flutter_heatmap_calendar: ^1.0.5
   iconsax: ^0.0.8
