--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "week",
-    "short_name": "week",
+    "name": "second_brain",
+    "short_name": "second_brain",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
