--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "week" "\0"
+            VALUE "FileDescription", "second_brain" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "week" "\0"
+            VALUE "InternalName", "second_brain" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "week.exe" "\0"
-            VALUE "ProductName", "week" "\0"
+            VALUE "OriginalFilename", "second_brain.exe" "\0"
+            VALUE "ProductName", "second_brain" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
