--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = week
+PRODUCT_NAME = second_brain
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.week
+PRODUCT_BUNDLE_IDENTIFIER = com.example.secondBrain
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
