--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,16 +29,12 @@ dependencies:
   delightful_toast: ^1.1.0
 #  audioplayers: ^6.0.0
   lottie: ^3.1.2
-#  msix: ^3.16.8
-#  progressive_time_picker: ^1.0.1
+
   flutter_expandable_fab: ^2.2.0
   timeline_tile: ^2.0.0
   easy_sidemenu: ^0.6.0
   equatable: ^2.0.5
-#  appflowy_board: ^0.1.2
-  provider: ^6.1.2
-#  flutter_boardview: ^0.2.1
-#  super_drag_and_drop: ^0.8.22
+#  provider: ^6.1.2
   flutter_mobx: ^2.0.6+5
   freezed: ^2.3.2
   infinite_scroll_pagination: ^4.0.0
