--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   pull_down_button: ^0.10.1
 #  flutter_slidable: ^3.1.1
+  system_tray: ^2.0.3
+  bitsdojo_window: ^0.1.6
+
+
 
   change_app_package_name: ^1.4.0
 
