--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   windows_notification: ^1.3.0
   path_provider: ^2.1.4
 
-  window_manager: ^0.4.0
+#  window_manager: ^0.4.0
   flutter_heatmap_calendar: ^1.0.5
   iconsax: ^0.0.8
   delightful_toast: ^1.1.0
