--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
 
 #  window_manager: ^0.4.0
   flutter_heatmap_calendar: ^1.0.5
-  iconsax: ^0.0.8
+  iconsax_plus: ^1.0.0
   delightful_toast: ^1.1.0
 #  audioplayers: ^6.0.0
   lottie: ^3.1.2
