--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
 #  audioplayers: ^6.0.0
   lottie: ^3.1.2
 
+  curved_navigation_bar: ^1.0.3
+  launch_at_startup: ^0.3.1
+  package_info_plus: ^8.0.2
+
   flutter_expandable_fab: ^2.2.0
   timeline_tile: ^2.0.0
   easy_sidemenu: ^0.6.0
