--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
 name: second_brain
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
+description: "A new Flutter project."
+
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.2.4+1
 
@@ -14,45 +13,40 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # UI Components
   flutter_staggered_grid_view: ^0.7.0
   font_awesome_flutter: ^10.7.0
-  get: ^4.6.5
-  get_storage: ^2.1.1
-  intl:
-  windows_notification: ^1.3.0
-  path_provider: ^2.1.4
-
-#  window_manager: ^0.4.0
   flutter_heatmap_calendar: ^1.0.5
-  iconsax_plus: ^1.0.0
-  delightful_toast: ^1.1.0
-
-
-  windows_audio: ^1.0.0
-
-  lottie: ^3.1.2
+  flutter_staggered_animations: ^1.1.1
   gradient_circular_progress_indicator: ^0.0.4
+  iconsax_plus: ^1.0.0
+  lottie: ^3.1.2
+  pull_down_button: ^0.10.1
+  super_drag_and_drop:
+  flow_board: ^0.0.1
 
-  curved_navigation_bar: ^1.0.3
-  launch_at_startup: ^0.3.1
-  package_info_plus: ^8.0.2
 
-  flutter_expandable_fab: ^2.2.0
-  timeline_tile: ^2.0.0
-  easy_sidemenu: ^0.6.0
-  equatable: ^2.0.5
-
+  # State Management
   flutter_mobx: ^2.0.6+5
   freezed: ^2.3.2
-  infinite_scroll_pagination: ^4.0.0
-  flutter_staggered_animations: ^1.1.1
-  pull_down_button: ^0.10.1
-  system_tray: ^2.0.3
+  get: ^4.6.5
+  get_storage: ^2.1.1
+
+  # Utilities
   bitsdojo_window: ^0.1.6
+  delightful_toast: ^1.1.0
+  intl:
+  launch_at_startup: ^0.3.1
+  package_info_plus: ^8.0.2
+  path_provider: ^2.1.4
+  system_tray: ^2.0.3
+  windows_audio: ^1.0.0
+  windows_notification: ^1.3.0
 
 
 
-  change_app_package_name: ^1.4.0
+
+
 
 
 dev_dependencies:
@@ -63,7 +57,6 @@ flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
     - assets/
