--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,18 +17,10 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   font_awesome_flutter: ^10.7.0
   flutter_heatmap_calendar: ^1.0.5
-  flutter_staggered_animations: ^1.1.1
   gradient_circular_progress_indicator: ^0.0.4
   iconsax_plus: ^1.0.0
-  lottie: ^3.1.2
-  pull_down_button: ^0.10.1
-  super_drag_and_drop:
-
-
 
   # State Management
-  flutter_mobx: ^2.0.6+5
-  freezed: ^2.3.2
   get: ^4.6.5
   get_storage: ^2.1.1
 
@@ -38,16 +30,13 @@ dependencies:
   intl:
   launch_at_startup: ^0.3.1
   package_info_plus: ^8.0.2
-  path_provider: ^2.1.4
   system_tray: ^2.0.3
-  windows_audio: ^1.0.0
+  media_kit: ^1.1.11
+  media_kit_libs_audio: ^1.0.5
   windows_notification: ^1.3.0
-
-
-
-
-
   flutter_lints: ^2.0.0
+  elegant_notification: ^2.3.0
+
 
 dev_dependencies:
   flutter_test:
