--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_lints: ^2.0.0
   elegant_notification: ^2.3.0
 #  cherry_toast: ^1.11.0
+#//////////////////
+  image_picker: ^1.1.2
+  google_ml_kit: ^0.19.0
 
 
 dev_dependencies:
