--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
 #//////////////////
   image_picker: ^1.1.2
   google_ml_kit: ^0.19.0
-
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +53,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/
+    - assets/svg/
     - assets/images/
     - assets/animations/
     - assets/lottie/
