--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   windows_notification: ^1.3.0
   flutter_lints: ^2.0.0
   elegant_notification: ^2.3.0
-#  cherry_toast: ^1.11.0
+  lottie: ^3.1.3
+
+  #  cherry_toast: ^1.11.0
 #//////////////////
   image_picker: ^1.1.2
   google_ml_kit: ^0.19.0
