--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_lints: ^2.0.0
   elegant_notification: ^2.3.0
   lottie: ^3.1.3
+  reorderable_grid_view: ^2.2.6
 
   #  cherry_toast: ^1.11.0
 #//////////////////
