--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   elegant_notification: ^2.3.0
   lottie: ^3.1.3
   reorderable_grid_view: ^2.2.6
-
+  syncfusion_flutter_calendar: ^28.1.33
   #  cherry_toast: ^1.11.0
 #//////////////////
   image_picker: ^1.1.2
