--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: second_brain
+name: questly
 
 description: "A new Flutter project."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.2.4+1
+version: 1.2.5+1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -23,9 +23,8 @@ dependencies:
   # State Management
   get: ^4.6.5
   get_storage: ^2.1.1
-
   # Utilities
-  bitsdojo_window: ^0.1.6
+  window_manager: ^0.5.1
   delightful_toast: ^1.1.0
   intl:
   launch_at_startup: ^0.3.1
@@ -35,10 +34,14 @@ dependencies:
   media_kit_libs_audio: ^1.0.5
   windows_notification: ^1.3.0
   flutter_lints: ^2.0.0
-  elegant_notification: ^2.3.0
+  elegant_notification: ^2.5.1
   lottie: ^3.1.3
   reorderable_grid_view: ^2.2.6
-  syncfusion_flutter_calendar: ^28.1.33
+  syncfusion_flutter_calendar: ^30.2.4
+  google_fonts: ^6.3.0
+  flip_board: ^1.0.0
+  uuid: ^3.0.6
+
   #  cherry_toast: ^1.11.0
 #//////////////////
   image_picker: ^1.1.2
